--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,8 @@
 }
 
 .App-logo {
-  height: 40vmin;
+  /* height: 40vmin; */
+  height: 10vmin;
   pointer-events: none;
 }
 
@@ -15,12 +16,25 @@
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  /* min-height: 100vh; */
+  min-height: 10vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.App-main {
+  background-color: #282c34;
+  /* min-height: 100vh; */
+  min-height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 1vmin);
   color: white;
 }
 
@@ -35,4 +49,18 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.clWarn {
+  width: 350px;
+  height: 30px;
+  padding:20px;
+  color: #000;
+  background-color: #ffffcc;
+}
+
+.clEgg:hover {
+  transform: scale(1.05);
+  color: rgba(204, 226, 212, 0.972);
+
 }
