--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,8 @@
 .App-header {
   background-color: #282c34;
   /* min-height: 100vh; */
-  min-height: 10vh;
+  /* min-height: 30vh; */
+  height: 30vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -29,13 +30,15 @@
 .App-main {
   background-color: #282c34;
   /* min-height: 100vh; */
-  min-height: 70vh;
+  /* min-height: 50vh; */
+  height: 70vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 1vmin);
   color: white;
+  overflow: auto;
 }
 
 .App-link {
@@ -51,13 +54,11 @@
   }
 }
 
-.clWarn {
-  width: 350px;
-  height: 30px;
-  padding:20px;
-  color: #000;
-  background-color: #ffffcc;
-}
+.clstatus {color: white}
+.clsuccess {color: green}
+.clwarning {color: orange}
+.clerror {color: red}
+
 
 .clEgg:hover {
   transform: scale(1.05);
